--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,9 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.6"
-sqlalchemy = "^1.3.16"
-pydantic = "^1.5.1"
+python = "^3.10"
+sqlalchemy = "^2.0.0b"
+pydantic = "^1.10.2"
 
 # Local development dependencies
 jupyter = {version = "^1.0.0", optional = true, extras = ["dev"]}
@@ -18,13 +18,9 @@ flake8 = {version = "^3.7.9", optional = true, extras = ["dev"]}
 
 
 [tool.poetry.dev-dependencies]
-mypy = "^0.770"
-black = "^19.10b0"
-isort = "^4.3.21"
-pytest = "^5.4.1"
-sqlalchemy-stubs = "^0.3"
-pytest-cov = "^2.8.1"
-sqlalchemy-utc = "^0.10.0"
+black = "^22.10"
+isort = "^5.10.1"
+pytest = "^7.1"
 
 [tool.poetry.extras]
 
