--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-sqlalchemy = "^1.4.27"
+sqlalchemy = "^2.0.0b2"
 pydantic = "^1.10.2"
 
 # Local development dependencies
